--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	</head>
 	<body>
 		<div class="wrapper">
+			<header>Zetsy</header>
 			
-			<!-- write HTML code neccesary here -->
 
 		</div><!-- .wrapper -->
 	</body>
