automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 	<body>
 		<div class="wrapper">
 			<header>Zetsy</header>
-			
+      <section id="necklace">
+        <img src="images/necklace.jpg">
 
+      </section>
 		</div><!-- .wrapper -->
 	</body>
 </html>
