automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<header>Zetsy</header>
+			<header><h1>Zetsy</h1></header>
       <section id="necklace">
         <img src="images/necklace.jpg">
 
