--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       </section>
       <section id="Press">
         <h2>Press</h2>
-        <img src="images/nmai-logo.png">
-        <img src="images/times-logo.png">
-        <img src="images/sedona-logo.png">
-        <img src="images/bergdorf-logo.png">
+        <a href="http://nmai.si.edu"><img src="images/nmai-logo.png" ></a>
+        <a href="http://www.nytimes.com/pages/t-magazine/"><img src="times-logo.png"></a>
+        <a href="http://www.sedonamonthly.com"><img src="sedona-logo.png"></a>
+        <a href="http://www.bergdorfgoodman.com/"><img src="bergdorf-logo.png"></a>
       </section>
 		</div><!-- .wrapper -->
 	</body>
