--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a href="http://www.bergdorfgoodman.com/"><img src="images/bergdorf-logo.png"></a>
       </section>
      <footer>
-       &copy; 2014 Zetsy, All Rights Reserved.
+       <p>&copy; 2014 Zetsy, All Rights Reserved.</p>
      </footer>
 		</div><!-- .wrapper -->
 	</body>
